--- a/aliza.html
+++ b/aliza.html
@@ -3,5 +3,4 @@ din
 tgti
 
 we
-I am a secret hippo. I wish I was a nonsecret hippo. 
-yeet
+I am a secret hippo. I wish I was a nonsecret hippo. All these hobos keep telling me to leave the hippo life behind, but I cannot. 
